# presentations

./: .gitignore  README.md
cpp/smart_pointers/: smart_pointers.pptx
cpp/smart_pointers/examples/: .gitignore  CMakeLists.txt  less_new_less_leak.cpp  ownership.cpp  raii.cpp  shared.cpp  shared_optimized.cpp  unique.cpp  unique_optimized.cpp
python/code/exercise_solutions/: 01_print_input.py  04_loop.py  05_file.py  06_set.py  07_dictionnary.py  08_functions.py  09_exception.py  10_class_init.py  11_class_properties.py  12_class_dunders.py  13_class_inheritance.py  2_conditional.py  3_list_tuple.py  5_file.py  6_set.py
python/code/exercises/: 01_input.md  01_input.py  01_print_input.md  02_conditional.md  02_conditional.py  03_list_tuple.md  04_loop.md  05_file.md  05_file.py  06_set.md  06_set.py  07_dictionnary.md  07_dictionnary.py  08_functions.md  09_exception.md  10_class_init.md  10_class_init.py  11_class_properties.md  11_class_properties.py  12_class_dunders.md  12_class_dunders.py  13_class_inheritance.md  13_class_inheritance.py  1_input.py  2_conditional.md  2_conditional.py  3_list_tuple.py  3_loop.py  4_file.py  4_loop.py  5_file.py  5_set.py  6_set.py  7_dictionnary.py  7_functions.py  9_exception.py
python/code/logging_examples/: app_code_logging.py  app_ini_logging.py  config.ini
python/code/nice_features/: 1_lists.py  2_strings.py  3_dictionnaries.py  4_file_handling.py  hellos.txt
python/code/project_calculator/: instructions.md
python/code/project_example_start/: setup.py
python/code/project_text_reader/: instructions.md
(+20 files in other folders)
